feat(quick-nav): add Quick Navigation with design-assistants and kids-puzzles
Add searchable Quick Nav at top of side panel to jump to AI design
assistants or kids-puzzles by tool name, then auto-click the tool.

Enables faster access to Artistly tools without manual browsing.

Verified by opening side panel, searching, selecting a tool, and
confirming navigation and click on app.artistly.ai.

--- a/sidepanel/sidepanel.html
+++ b/sidepanel/sidepanel.html
@@ -12,6 +12,22 @@
     <div class="header">
       <h1>Automation Toolbox</h1>
     </div>
+
+    <!-- Quick Navigation -->
+    <div class="section quick-nav-section">
+      <label class="section-label" for="quick-nav-input">Quick Navigation</label>
+      <div class="quick-nav-wrapper">
+        <input
+          type="text"
+          id="quick-nav-input"
+          class="style-search-input"
+          placeholder="Search tools..."
+          autocomplete="off"
+        />
+        <div class="quick-nav-dropdown" id="quick-nav-dropdown"></div>
+      </div>
+    </div>
+
     <div class="tool-sections">
       <!-- Artistly Section -->
       <div class="tool-section">
