chore(release): v1 — footer, store copy, privacy justifications, screenshots
Add Buy Me a Coffee footer to sidepanel, Chrome Store description and
privacy-justification copy, promo/screenshot assets, and .gitignore.

Prepares Automation Toolbox v1 for Chrome Web Store submission.

Verified by loading extension, checking footer link and layout, and
reviewing store copy and permission justifications.

--- a/sidepanel/sidepanel.html
+++ b/sidepanel/sidepanel.html
@@ -160,6 +160,13 @@
     </div>
   </div>
 
+  <footer class="sidepanel-footer">
+    <a href="https://buymeacoffee.com/john.adams" target="_blank" rel="noopener noreferrer" class="buymeacoffee-button">
+      <span class="button-icon">☕</span>
+      Buy me a coffee
+    </a>
+  </footer>
+
   <script src="sidepanel.js"></script>
 </body>
 </html>
